--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Chicken Point - Aubervilliers | Le Maître du Poulet Grillé</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="logo.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -179,4 +179,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
