--- a/restaurant.html
+++ b/restaurant.html
@@ -6,7 +6,7 @@
     <title>Le Restaurant - Chicken Point Aubervilliers</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="logo.jpg">
 </head>
 <body>
     <div id="preloader">
@@ -179,4 +179,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
